--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,5 @@
+title: Bonk Leagues
+description: Bonk Leagues is an open source modified version of the popular game http://bonk.io/
+show_downloads: true
+google_analytics:
 theme: jekyll-theme-cayman
