Done a few "Quick fixes", titles fixed, restructured a couple things, fixed some css.

--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,7 @@ defaults:
   -
     values:
       title: 'Bonk Leagues'
+      shorttitle: 'Bonk Leagues'
       layout: 'default'
       desc: 'Bonk Leagues - a custom client, skin editor and more for http://bonk.io/'
       canonical: 'https://bonkleagues.github.io/'
