**New Bonk Leagues update out (for the Quick Play Map Checker mainly): ``` - The Quick Play Map Checker now has a new "Stats" feature, which allows you to check special QP leaderboards, see overall average and total stats, and also see the estimated percentage of copied maps in quick play. (spoiler alert: it's kind of depressing). - The Quick Play Map Checker has also overall been revamped a bit to make it neater and noicer. - New Sample Skin added, from Shyguymask. - Small CSS fixes, including an all new highlighting colour effect. - Small SEO fixes that no one probably cares about /shrug. ``` *Links to updated stuff: <https://bonkleagues.github.io/quickplay.html>*

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ defaults:
       title: 'Bonk Leagues'
       shorttitle: 'Bonk Leagues'
       layout: 'default'
-      desc: 'Bonk Leagues - a custom client, skin editor and more for http://bonk.io/'
+      desc: 'Bonk Leagues - the best tools for bonk.io, featuring a skin manager, XP checker and more for http://bonk.io/'
       canonical: 'https://bonkleagues.github.io/'
       sel: 'home'
       scriptToUse: 'script'
